Plebbit entry removed

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 					<li><a target="_blank" href="https://zh.wikipedia.org/">维基百科 自由的百科全书</a></li>
 					<li><a target="_blank" href="https://ru.wikipedia.org/">Википедию</a></li>
 				</ul>
-				<h2>Linux</h2>
-				<ul>
-					<li><a target="_blank" href="https://artixlinux.org/">Artix Website</a></li>
+				<h2>tech</h2>
+                <ul>
+                    <li><a target="_blank" href="https://www.github.com/">Git</a></li>
+                    <li><a target="_blank" href="https://artixlinux.org/">Artix Website</a></li>
 					<li><a target="_blank" href="https://wiki.archlinux.org/">Arch Wiki</a></li>
 					<li><a target="_blank" href="https://aur.archlinux.org/">AUR</a></li>
-					<li><a target="_blank" href="https://reddit.com/r/artixlinux">r/artixlinux</a></li>
 				</ul>
 			</div>
             
