Astropix link fixed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<li><a target="_blank" href="https://exoplanetarchive.ipac.caltech.edu/">NASA Exoplanet Archive</a></li>
 					<li><a target="_blank" href="https://skyandtelescope.org/">Sky & Telescope</a></li>
                     <!-- <li><a target="_blank" href="https://jila.colorado.edu/~ajsh/">Andrew Hamilton's Homepage</a></li> -->
-                    <li><a target="_blank" href="https://apod.nasa.gov/apod/archivepix.html">NASA Picture of The Day</a></li>
+                    <li><a target="_blank" href="https://apod.nasa.gov/apod/astropix.html">NASA Picture of The Day</a></li>
                     <!-- <li><a target="_blank" href="https://www.universetoday.com/">Universe Today</a></li> -->
                     
                     <br>
