--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 			</div>
 
 			<div class="gi-col-1">
-				<h2>4chan</h2>
+				<h2>main</h2>
 				<ul>
 					<li><a target="_blank" href="https://www.4chan.org/sci">/sci/</a></li>
-					<li><a target="_blank" href="https://www.4chan.org/g">/g/</a></li>
-					<li><a target="_blank" href="https://www.4chan.org/vrpg">/vrpg/</a></li>
+					<li><a target="_blank" href="https://www.youtube.com">yt</a></li>
+					<li><a target="_blank" href="https://www.facebook.com">fb</a></li>
 				</ul>
                 
 				<h2>Wikis</h2>
@@ -40,7 +40,7 @@
 				</ul>
 				<h2>tech</h2>
                 <ul>
-                    <li><a target="_blank" href="https://www.github.com/">Git</a></li>
+                    <li><a target="_blank" href="https://www.github.com/">Github</a></li>
                     <li><a target="_blank" href="https://artixlinux.org/">Artix Website</a></li>
 					<li><a target="_blank" href="https://wiki.archlinux.org/">Arch Wiki</a></li>
 					<li><a target="_blank" href="https://aur.archlinux.org/">AUR</a></li>
